--- a/topology.yml
+++ b/topology.yml
@@ -1,13 +1,13 @@
-name: srlceos01
+name: xrdtest
 
 topology:
   nodes:
-    srl:
-      kind: srl
-      image: ghcr.io/nokia/srlinux
-    ceos:
-      kind: ceos
-      image: ceos:4.25.0F
+    xrd1:
+      kind: cisco_xrd
+      image: ios-xr/xrd-control-plane:7.9.2
+    xrd2:
+      kind: cisco_xrd
+      image: ios-xr/xrd-control-plane:7.9.2
 
   links:
-    - endpoints: ["srl:e1-1", "ceos:eth1"]
+    - endpoints: ["xrd1:Gi0-0-0-0", "xrd2:Gi0-0-0-0"]
