--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Setup Python Environment
       run: |
         python3 -m venv .venv
-        source .venv/bin/active
+        source .venv/bin/activate
         pip install -r requirements.txt
     - name: Deploy Lab
       run: containerlab deploy -t topology.yml
